GenomeSpace -- file upload & directory creation
git-svn-id: https://igv.googlecode.com/svn/trunk@1054 17392f64-ead8-4cea-ae29-09b3ab513800